--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,20 @@
-Welcome to Tasty Search
+<h1>Tasty Search</h1>
+
+<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search">
+
+<input id = "submit-query" class="form-control" type="submit" value="Find it!" aria-label="Search">
+
+<footer>
+	<script src='{{url_for('static', filename='jquery-3.0.0.min.js')}}'></script>
+	<script src='{{url_for('static', filename='bootstrap.min.js')}}'></script>
+
+	<script> 
+	var button = document.getElementById("submit-query");
+	button.onclick = function(){
+		var query_string = document.getElementById("search-query").value
+		console.log(query_string);
+	};
+
+	</script>
+
+</footer>
