added base CSS file with color scheme and some formatting

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,21 +1,25 @@
-<h1>Tasty Search</h1>
+<head>
+	<title>Tasty Search</title>
+	<link href='{{url_for('static', filename='main.css')}}' rel='stylesheet' type='text/css'>
+</head>
+<body>
+	<h1><span id="logo">Tasty</span> Search</h1>
 
-<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search" value = "{{query}}" required>
+	<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search" value = "{{query}}" required>
 
-<input id = "submit-query" class="form-control" type="submit" value="Find it!" aria-label="Search">
+	<input id = "submit-query" class="form-control" type="submit" value="Find it!" aria-label="Search">
 
-<h2>Results</h2>
+	<h2>Results</h2>
 
-{% for result in results %}
-	<div>
-		<h3>{{result.title}}</h3>
-		<p>By {{result.author}}</p>
-		<p>{{result.abstract}}</p>
-		<br>
-	</div>
-{% endfor %}
-
-
+	{% for result in results %}
+		<div>
+			<h3>{{result.title}}</h3>
+			<p>By {{result.author}}</p>
+			<p>{{result.abstract}}</p>
+			<br>
+		</div>
+	{% endfor %}
+</body>
 <footer>
 	<script src='{{url_for('static', filename='jquery-3.0.0.min.js')}}'></script>
 	<script src='{{url_for('static', filename='bootstrap.min.js')}}'></script>
