--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,16 @@
-<h1>Tasty Search</h1>
+<head>
+	<title>Tasty Search</title>
+	<link href='{{url_for('static', filename='main.css')}}' rel='stylesheet' type='text/css'>
+</head>
+<body>
+	<div class="search-area">
+		<h1><span id="logo">Tasty</span> Search</h1>
 
-<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search">
+		<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search">
 
-<input id = "submit-query" class="form-control" type="submit" value="Find it!" aria-label="Search">
-
+		<input id = "submit-query" class="form-control" type="submit" value="Find it!" aria-label="Search">
+	</div>
+</body>
 <footer>
 	<script src='{{url_for('static', filename='jquery-3.0.0.min.js')}}'></script>
 	<script src='{{url_for('static', filename='bootstrap.min.js')}}'></script>
