--- a/static/main.css
+++ b/static/main.css
@@ -15,6 +15,11 @@ h1 img {
 	max-width: 220px;
 }
 
+h1 a, h1 a.visited {
+	text-decoration: none;
+	color: #94aaa3;
+}
+
 h2 {
 	color: #bfc0bd;
 	font-family: 'Josefin Sans', sans-serif;
