--- a/templates/results.html
+++ b/templates/results.html
@@ -3,7 +3,7 @@
 	<link href='{{url_for('static', filename='main.css')}}' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<h1><span id="logo">Tasty</span> Search</h1>
+	<h1><a href="/"><span id="logo">Tasty</span> Search</a></h1>
 
 	<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search" value = "{{query}}" required>
 
@@ -31,6 +31,13 @@
 		console.log(query_string);
 	};
 
+	var input = document.getElementById("search-query");
+	input.addEventListener("keyup", function(event) {
+		if (event.keyCode === 13) {
+			event.preventDefault();
+			button.click();
+		}
+	});
 	</script>
 
 </footer>
