--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,7 @@
 			<h1 id="logo"><span id="logo-tasty">Tasty</span> Search</h1>
 
 			<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search">
-
-			<input id = "submit-query" class="form-control btn" type="submit" value="Find it!" aria-label="Search">
+			<input id = "submit-query" class="form-control btn" type="submit" value="Find it!" aria-label="Search" style="margin-top: 25px">
 		</div>
 	</div>
 </body>
