--- a/templates/results.html
+++ b/templates/results.html
@@ -26,7 +26,7 @@
 					<div class="row">
 						<div class="col s9">
 							<h5 class="title">{{result.title}}</h5>
-							<p class="abstract">{{result.paperAbstract}}</p>
+							<p class="abstract">{{result.paperAbstract|truncate(500)}}</p>
 							<div class="citations">
 								<p>Cited by: {{result.numCitedBy}}</p>
 								<p>Key citations: {{result.numKeyCitations}}</p>
