Minor ui changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,10 @@
 	<div class="container">
 		<div class="search-area">
 			<h1 id="logo"><span id="logo-tasty">Tasty</span> Search</h1>
-
+			<h6>An academic search engine designed for you</h6>
+			<br/>
 			<input id="search-query" class="form-control" type="text" placeholder="What are you looking for?" aria-label="Search">
-			<input id = "submit-query" class="form-control btn" type="submit" value="Find it!" aria-label="Search" style="margin-top: 25px">
+			<input id = "submit-query" class="form-control btn" type="submit" value="Search" aria-label="Search" style="margin-top: 25px">
 		</div>
 	</div>
 </body>
