--- a/templates/results.html
+++ b/templates/results.html
@@ -19,8 +19,9 @@
 		</div>
 		<div class="divider"></div>
 		<div class="results">
-			<p>Showing top 10 results...</p>
-
+			<br/>
+			<h6>Showing top 10 results...</h6>
+			<p>Refine your search by selecting a keyword of interest for each paper</p>
 			{% for result in results %}
 				<div class="section result">
 					<div class="row">
